# MeshSegNet-DentalArchAligner

./: .gitignore  README.md  cbct_jaw_registration.pyd  cbct_preprocessing.py  pyproject.toml  registration.py  teeth_segmentation.py  yolov10_detect_arch.py
